--- a/templates/base.html
+++ b/templates/base.html
@@ -482,7 +482,7 @@
               </div> -->
                         <h2>Follow us on</h2>
                         <p class="socials">
-                            <a target="_blank" href="https://www.facebook.com/hetaudacitycollege.edu.np">
+                            <a target="_blank" href="https://www.facebook.com/@hetaudacitycollege.edu.np">
                                 <i class="fa fa-facebook"></i>
                             </a>
 
